# notifications_sprint_1

./: .env-template  .gitignore  README.md  README.rst  local.yml  manage.py  production.yml  pyproject.toml  setup.cfg
.envs/.local/: .django  .postgres
.envs/.production/: .django  .postgres
.github/workflows/: ci.yml
compose/local/django/: Dockerfile
compose/production/django/: Dockerfile  entrypoint  start-kafka-consumer
compose/production/traefik/: traefik.yml
config/: celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  notifications-api-architecture.md  users.rst
notifications_api/: conftest.py
notifications_api/apps/admin_emails/: admin.py  apps.py  models.py  tasks.py  utils.py
notifications_api/apps/admin_emails/management/commands/: send_queued.py
notifications_api/apps/admin_emails/migrations/: 0001_initial.py  0002_auto_20211228_1949.py  0003_auto_20211228_1951.py  0004_auto_20211231_0807.py
notifications_api/apps/smoke/: apps.py  tests.py  urls.py  views.py
notifications_api/apps/task_scheduler/: apps.py  models.py  scheduler.py  tasks.py  utils.py
notifications_api/apps/task_scheduler/migrations/: 0001_initial.py
notifications_api/apps/users/: apps.py  models.py
notifications_api/apps/users/migrations/: 0001_initial.py
notifications_api/apps/users/services/: user.py
notifications_api/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
notifications_api/emails/: constants.py  email_provider.py  notification_transport.py  schemas.py
notifications_api/emails/services/: transport_service.py
notifications_api/kafka/: constants.py  consume.py  consumer.py  events.py  notification_transport.py  registry.py  tasks.py
notifications_api/kafka/handlers/: base.py  user_registered_event.py
notifications_api/kafka/schemas/: base_event_schema.py  user_registered_event_schema.py
notifications_api/kafka/services/: transport_service.py
notifications_api/templates/: base.html
notifications_api/templates/account/: email.html
notifications_api/users/: models.py  urls.py
notifications_api/users/tests/: test_admin.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
requirements/: base.txt  local.txt
(+1 files in other folders)
