[tool.poetry]
name = "notifications_sprint_1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytz = "^2021.3"
python-slugify = "^5.0.2"
Pillow = "^8.4.0"
argon2-cffi = "^21.3.0"
whitenoise = "^5.3.0"
redis = "^4.0.2"
hiredis = "^2.0.0"
celery = "^5.2.1"
django-celery-beat = "^2.2.1"
flower = "^1.0.0"
django-environ = "^0.8.1"
django-model-utils = "^4.2.0"
django-allauth = "^0.47.0"
django-crispy-forms = "^1.13.0"
crispy-bootstrap5 = "^0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
